# basalt

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: architecture.md  constants.md  usage.md
src/: cache.rs  constants.rs  dexscreener.rs  executor.rs  lib.rs  main.rs  poolscout.rs  quote.rs  trade.rs  types.rs  universal_router.rs  wallet.rs
src/dex/: aerodrome.rs  mod.rs  token.rs  v3.rs  v4.rs
tests/: cache_test.rs  executor_test.rs  trade_test.rs  universal_router_test.rs  wallet_test.rs
