[package]
name = "basalt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum interaction
alloy = { version = "0.8", features = ["full", "node-bindings", "rpc-types-eth", "rpc-types-trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client for DexScreener API
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
